kubernetes-files/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: online-boutique-mtls
  namespace: online-boutique
spec:
  mtls:
    mode: STRICT
