kubernetes-files/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: online-boutique-virtualservice
  namespace: online-boutique
spec:
  hosts:
    - shop.metatechz.store

  gateways:
    - online-boutique-gateway

  http:
    - name: frontend-route

      match:
        - uri:
            prefix: /

      route:
        - destination:
            host: frontend
            port:
              number: 80
          weight: 100

      timeout: 30s

      retries:
        attempts: 3
        perTryTimeout: 5s
        retryOn: gateway-error,connect-failure,refused-stream,5xx
