kubernetes-files/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: frontend-allow-ingress
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: frontend

  action: ALLOW

  rules:
  - from:
    - source:
        namespaces:
        - istio-system

    to:
    - operation:
        methods:
        - GET
        - POST
        - PUT
        - DELETE
        - PATCH
